fix: remove git-specific -c flags and fix .jj repo detection
The plugin was passing git-specific `-c key=value` config overrides to
jj (e.g. `-c color.advice=false`, `-c advice.waitingForEditor=false`),
causing "unexpected argument '-c'" errors for commands like `:J log`.

Changes:
- Remove `s:disable_colors` array that built `-c color.<type>=false`
  flags (color is already disabled via `NO_COLOR=1` env var)
- Remove `-c advice.waitingForEditor=false` from command construction
- Simplify `s:AskPassArgs()` to return `[]` (jj has no `-c core.askPass`)
- Remove `-c diff.context=0` from diff tool and quickfix log commands
- Remove `-c diff.noprefix=false` from quickfix log command
- Remove `-c blame.coloring=none` from blame command
- Fix `FujjitiveExtractJJDir` to detect `.jj/` directories before `.git/`
- Fix `s:Tree()` to extract workspace root from `.jj` paths

Also adds a `:J log` integration test to the neovim CI job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,12 @@ jobs:
           neovim: true
           version: ${{ matrix.neovim_version }}
 
+      - name: Install Jujutsu (jj)
+        run: |
+          curl -LsSf https://github.com/jj-vcs/jj/releases/download/v0.38.0/jj-v0.38.0-x86_64-unknown-linux-musl.tar.gz \
+            | tar xz -C /usr/local/bin
+          jj version
+
       - name: Verify plugin loads without errors
         run: |
           nvim --headless -u NONE -N \
@@ -132,3 +138,21 @@ jobs:
             -c 'helptags doc/' \
             -c 'help fujjitive' \
             -c 'if expand("%:t") ==# "fujjitive.txt" | qall | else | cquit 1 | endif'
+
+      - name: Verify :J log opens pager buffer with log output
+        env:
+          JJ_USER: Test User
+          JJ_EMAIL: test@example.com
+        run: |
+          tmpdir=$(mktemp -d)
+          cd "$tmpdir"
+          jj git init
+          echo "test content" > file.txt
+          jj describe -m "test: initial commit"
+
+          nvim --headless -u NONE -N \
+            --cmd 'set rtp^=${{ github.workspace }}' \
+            --cmd 'runtime plugin/fujjitive.vim' \
+            -c 'edit file.txt' \
+            -c 'J log' \
+            -c 'if &filetype ==# "git" && line("$") > 1 | qall | else | cquit 1 | endif'
