fix(ci): extract jj tarball to temp dir to avoid tar permission errors on GitHub Actions
The jj release tarball contains a './' directory entry that causes tar
to attempt setting utime and mode on the target directory (/usr/local/bin),
which fails with 'Operation not permitted' on GitHub Actions runners.
Fix by extracting to a temp directory first, then installing the binary
with 'sudo install'.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,8 +96,11 @@ jobs:
 
       - name: Install Jujutsu (jj)
         run: |
+          tmpdir=$(mktemp -d)
           curl -LsSf https://github.com/jj-vcs/jj/releases/download/v0.38.0/jj-v0.38.0-x86_64-unknown-linux-musl.tar.gz \
-            | tar xz -C /usr/local/bin
+            | tar xz -C "$tmpdir"
+          sudo install "$tmpdir/jj" /usr/local/bin/jj
+          rm -rf "$tmpdir"
           jj version
 
       - name: Verify plugin loads without errors
