test: add comprehensive CI test suite with 25 tests across 7 scripts
Covers editor protocol (OSC 51 parsing, PTY/non-PTY modes, partial
buffering, sentinel file protocol), status buffer (settings, headers,
file listing, read-only), describe/commit (-m flag), pager commands
(log, diff), path resolution (FujjitiveJJDir, FujjitiveFind),
statusline output, and config functions.

Replaces the ad-hoc integration test in CI with `bash test/run_tests.sh`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,20 +142,8 @@ jobs:
             -c 'help fujjitive' \
             -c 'if expand("%:t") ==# "fujjitive.txt" | qall | else | cquit 1 | endif'
 
-      - name: Verify :J log opens pager buffer with log output
+      - name: Run test suite
         env:
           JJ_USER: Test User
           JJ_EMAIL: test@example.com
-        run: |
-          tmpdir=$(mktemp -d)
-          cd "$tmpdir"
-          jj git init
-          echo "test content" > file.txt
-          jj describe -m "test: initial commit"
-
-          nvim --headless -u NONE -N \
-            --cmd 'set rtp^=${{ github.workspace }}' \
-            --cmd 'runtime plugin/fujjitive.vim' \
-            -c 'edit file.txt' \
-            -c 'J log' \
-            -c 'if &filetype ==# "git" && line("$") > 1 | qall | else | cquit 1 | endif'
+        run: bash test/run_tests.sh
